--- a/res/layout-land/info.xml
+++ b/res/layout-land/info.xml
@@ -1,20 +1,19 @@
 <LinearLayout android:orientation="horizontal" xmlns:android="http://schemas.android.com/apk/res/android" 
-	android:layout_width="fill_parent" android:layout_height="fill_parent" android:background="#000000" >
+	android:layout_width="fill_parent" android:layout_height="fill_parent">
 
 	<LinearLayout android:orientation="vertical"
 			android:layout_weight="0.6"
-		android:layout_width="fill_parent" android:layout_height="fill_parent" android:background="#000000" >
+		android:layout_width="fill_parent" android:layout_height="fill_parent">
 		<TextView android:text="@string/info" style="@style/InfoTitle" android:layout_marginRight="4dp" />
 		<TextView android:id="@+id/info_text" 
-			android:layout_width="fill_parent" android:layout_height="fill_parent"
-			android:layout_weight="1.0"
+			android:layout_width="fill_parent" android:layout_height="0dp"
 		/>
 	</LinearLayout>
 
 
 	<LinearLayout android:orientation="vertical"
 		android:layout_weight="0.4"
-		android:layout_width="fill_parent" android:layout_height="fill_parent" android:background="#000000" >
+		android:layout_width="fill_parent" android:layout_height="fill_parent">
 		<TextView style="@style/InfoTitle"
 				android:id="@+id/plinfo_text"
 			 	android:background="#4040A0"
@@ -22,7 +21,7 @@
 			 	android:layout_marginRight="4dp"
 			 />		
 		<TextView android:layout_width="fill_parent" android:layout_height="fill_parent"
-		android:layout_weight="1.0" android:text=""/>
+		android:text=""/>
 		<include layout="@layout/controls" />
 	</LinearLayout>
 </LinearLayout>
