--- a/res/layout/fileview.xml
+++ b/res/layout/fileview.xml
@@ -1,11 +1,11 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical"
-	android:layout_width="fill_parent" android:layout_height="fill_parent" android:background="#000000"
+	android:layout_width="fill_parent" android:layout_height="fill_parent"
 	android:id="@+id/fileview"
 	 >	
 	<TextView android:id="@+id/list_title"
 		android:layout_width="wrap_content"
-	    android:layout_height="wrap_content"
+	    android:layout_height="0dp"
 	    android:textSize="20dp"
 	    android:textColor="#FFFFFFFF"
 	    android:layout_margin="4dp"
