--- a/res/layout/infoscreen.xml
+++ b/res/layout/infoscreen.xml
@@ -7,7 +7,7 @@
 >
 
 <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
-	android:orientation="horizontal" android:layout_alignParentTop="true"
+	android:orientation="horizontal"
 	android:background="#000080"
 	android:id="@+id/title_bar"
 >
