--- a/res/layout/player.xml
+++ b/res/layout/player.xml
@@ -36,7 +36,7 @@
 		
 	</LinearLayout>
 
-	<com.ssb.droidsound.utils.FixedViewFlipper 
+	<ViewFlipper 
 		android:id="@+id/flipper"
 	    android:layout_width="fill_parent"
 	    android:layout_height="fill_parent"
@@ -69,5 +69,5 @@
 		</FrameLayout>
 
 	
-	</com.ssb.droidsound.utils.FixedViewFlipper>
+	</ViewFlipper>
 </LinearLayout>
