--- a/res/layout/songlist_item.xml
+++ b/res/layout/songlist_item.xml
@@ -9,21 +9,19 @@
 	android:id="@+id/icon"
 	android:layout_alignParentLeft="true"
 	android:layout_centerVertical="true"
-/>
+	android:contentDescription="@string/icon"/>
 
 <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
 	android:layout_alignParentTop="true"
 	android:layout_toRightOf="@id/icon"
 	android:id="@+id/title"
 	android:textColor="#FFFFFF" android:textSize="22dp"
-	android:text="SongName"
 />
 <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
 	android:layout_toRightOf="@id/icon"
 	android:id="@+id/subtitle"
 	android:layout_below="@id/title"
 	android:textColor="#FFFFFF" android:textSize="15dp"
-	android:text="Author"
 />
 
 <TextView android:layout_width="wrap_content" android:layout_height="45dp"
@@ -33,7 +31,6 @@
 	android:id="@+id/sidetitle"
 	android:textColor="#a0a0a0" android:textSize="15dp"
 	android:layout_marginRight="8dp"
-	android:text="(0000)"
 />
 
 </RelativeLayout>
