Make settings work, and show dialog during db scan

--- a/res/layout/songlist_item.xml
+++ b/res/layout/songlist_item.xml
@@ -3,7 +3,8 @@
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    >
+	android:background="@android:drawable/list_selector_background">
+
 <ImageView android:src="@drawable/gflat_note" 
 	android:layout_width="36dp" android:layout_height="36dp"
 	android:id="@+id/icon"
@@ -15,14 +16,12 @@
 	android:layout_alignParentTop="true"
 	android:layout_toRightOf="@id/icon"
 	android:id="@+id/title"
-	android:textColor="#FFFFFF" android:textSize="22dp"
-/>
+	android:textColor="#FFFFFF" android:textSize="22dp" />
 <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
 	android:layout_toRightOf="@id/icon"
 	android:id="@+id/subtitle"
 	android:layout_below="@id/title"
-	android:textColor="#FFFFFF" android:textSize="15dp"
-/>
+	android:textColor="#FFFFFF" android:textSize="15dp" />
 
 <TextView android:layout_width="wrap_content" android:layout_height="45dp"
 	android:layout_alignParentBottom="true"
@@ -30,7 +29,6 @@
 	android:gravity="bottom"
 	android:id="@+id/sidetitle"
 	android:textColor="#a0a0a0" android:textSize="15dp"
-	android:layout_marginRight="8dp"
-/>
+	android:layout_marginRight="8dp" />
 
 </RelativeLayout>
