--- a/res/layout/collection_view.xml
+++ b/res/layout/collection_view.xml
@@ -7,6 +7,7 @@
         android:id="@+id/collection_view"
         android:layout_width="fill_parent"
         android:layout_height="0dp"
-        android:layout_weight="1" />
+        android:layout_weight="1"
+        android:fastScrollEnabled="true" />
 
 </LinearLayout>
