Enhance look&feel, fix small bugs

--- a/res/layout/songlist_item.xml
+++ b/res/layout/songlist_item.xml
@@ -27,10 +27,15 @@
 
     <TextView
         android:id="@+id/title"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_toRightOf="@id/icon"
+        android:lines="1"
+        android:shadowRadius="2"
+        android:shadowColor="@android:color/black"
+        android:shadowDx="0"
+        android:shadowDy="1"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textColor="@android:color/primary_text_dark" />
 
