--- a/res/layout/collection_view.xml
+++ b/res/layout/collection_view.xml
@@ -5,6 +5,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
+        android:background="#ff111111"
         android:layout_height="wrap_content" >
 
         <Button
@@ -17,7 +18,7 @@
             android:id="@+id/search"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1" >
+            android:layout_weight="1">
         </EditText>
 
         <FrameLayout
