--- a/res/layout/playing_view.xml
+++ b/res/layout/playing_view.xml
@@ -11,94 +11,100 @@
         android:layout_weight="1" />
 
     <LinearLayout
-        android:id="@+id/progress_container"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center" >
+        android:background="#ff111111"
+        android:orientation="vertical" >
 
-        <TextView
-            android:id="@+id/time"
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
-            android:gravity="center"
-            android:padding="4dp" />
-
-        <SeekBar
-            android:id="@+id/seek_bar"
-            style="?android:attr/progressBarStyleHorizontal"
-            android:layout_width="0dip"
+        <LinearLayout
+            android:id="@+id/progress_container"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1" />
+	        android:padding="4dp">
 
-        <TextView
-            android:id="@+id/length"
+            <TextView
+                android:id="@+id/time"
+                android:layout_width="wrap_content"
+                android:layout_height="fill_parent"
+                android:gravity="center"
+                android:padding="4dp" />
+
+            <SeekBar
+                android:id="@+id/seek_bar"
+                style="?android:attr/progressBarStyleHorizontal"
+                android:layout_width="0dip"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+
+            <TextView
+                android:id="@+id/length"
+                android:layout_width="wrap_content"
+                android:layout_height="fill_parent"
+                android:gravity="center"
+                android:padding="4dp" />
+        </LinearLayout>
+
+        <GridLayout
+            android:id="@+id/buttons"
+            android:layout_gravity="center"
             android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
-            android:gravity="center"
-            android:padding="4dp" />
+            android:layout_height="wrap_content" >
+
+            <ImageButton
+                android:id="@+id/button_back"
+                android:layout_width="60dp"
+                android:layout_height="50dp"
+                android:layout_column="0"
+                android:layout_row="0"
+                android:background="@android:color/transparent"
+                android:contentDescription="&lt;&lt;"
+                android:scaleType="fitXY"
+                android:src="@drawable/back_button" />
+
+            <ImageButton
+                android:id="@+id/button_play"
+                android:layout_width="60dp"
+                android:layout_height="50dp"
+                android:layout_column="1"
+                android:layout_row="0"
+                android:background="@android:color/transparent"
+                android:contentDescription=">"
+                android:scaleType="fitXY"
+                android:src="@drawable/play_button" />
+
+            <ImageButton
+                android:id="@+id/button_pause"
+                android:layout_width="60dp"
+                android:layout_height="50dp"
+                android:layout_column="1"
+                android:layout_row="0"
+                android:background="@android:color/transparent"
+                android:contentDescription="||"
+                android:scaleType="fitXY"
+                android:src="@drawable/pause_button" />
+
+            <ImageButton
+                android:id="@+id/button_stop"
+                android:layout_width="60dp"
+                android:layout_height="50dp"
+                android:layout_column="2"
+                android:layout_row="0"
+                android:background="@android:color/transparent"
+                android:contentDescription="[]"
+                android:scaleType="fitXY"
+                android:src="@drawable/stop_button" />
+
+            <ImageButton
+                android:id="@+id/button_forward"
+                android:layout_width="60dp"
+                android:layout_height="50dp"
+                android:layout_column="3"
+                android:layout_row="0"
+                android:background="@android:color/transparent"
+                android:contentDescription=">>"
+                android:scaleType="fitXY"
+                android:src="@drawable/fwd_button" />
+        </GridLayout>
     </LinearLayout>
-
-    <GridLayout
-        android:id="@+id/buttons"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:padding="4pt" >
-
-        <ImageButton
-            android:id="@+id/button_back"
-            android:layout_width="60dp"
-            android:layout_height="50dp"
-            android:layout_column="0"
-            android:layout_row="0"
-            android:background="@android:color/transparent"
-            android:contentDescription="&lt;&lt;"
-            android:scaleType="fitXY"
-            android:src="@drawable/back_button" />
-
-        <ImageButton
-            android:id="@+id/button_play"
-            android:layout_width="60dp"
-            android:layout_height="50dp"
-            android:layout_column="1"
-            android:layout_row="0"
-            android:background="@android:color/transparent"
-            android:contentDescription=">"
-            android:scaleType="fitXY"
-            android:src="@drawable/play_button" />
-
-        <ImageButton
-            android:id="@+id/button_pause"
-            android:layout_width="60dp"
-            android:layout_height="50dp"
-            android:layout_column="1"
-            android:layout_row="0"
-            android:background="@android:color/transparent"
-            android:contentDescription="||"
-            android:scaleType="fitXY"
-            android:src="@drawable/pause_button" />
-
-        <ImageButton
-            android:id="@+id/button_stop"
-            android:layout_width="60dp"
-            android:layout_height="50dp"
-            android:layout_column="2"
-            android:layout_row="0"
-            android:background="@android:color/transparent"
-            android:contentDescription="[]"
-            android:scaleType="fitXY"
-            android:src="@drawable/stop_button" />
-
-        <ImageButton
-            android:id="@+id/button_forward"
-            android:layout_width="60dp"
-            android:layout_height="50dp"
-            android:layout_column="3"
-            android:layout_row="0"
-            android:background="@android:color/transparent"
-            android:contentDescription=">>"
-            android:scaleType="fitXY"
-            android:src="@drawable/fwd_button" />
-    </GridLayout>
 
 </LinearLayout>
