--- a/res/layout/collection_view.xml
+++ b/res/layout/collection_view.xml
@@ -5,6 +5,7 @@
     android:orientation="vertical">
 
     <LinearLayout
+        android:animateLayoutChanges="true"
         android:layout_width="match_parent"
         android:background="#ff111111"
         android:layout_height="wrap_content" >
